<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".ui.RulesFragment">


    <ImageButton
        android:id="@+id/ib_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wild_margin"
        android:layout_marginTop="@dimen/wild_margin"
        android:background="@null"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/tv_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_main"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:text="@string/rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_first_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:layout_marginTop="@dimen/wild_margin"
        android:fontFamily="@font/font_main"
        android:text="@string/_1_go_to_shop_and_buy_attempts"
        android:textColor="@color/menu_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_arrow_back" />


    <TextView
        android:id="@+id/tv_second_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:fontFamily="@font/font_main"
        android:text="@string/_2_press_play_button_and_then_press_use_attempt_button"
        android:textColor="@color/menu_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_rules" />


    <TextView
        android:id="@+id/tv_third_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wild_margin"

        android:fontFamily="@font/font_main"
        android:text="@string/_3_rules"
        android:textColor="@color/menu_text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_gl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_gl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:fontFamily="@font/font_main"
        android:gravity="center"
        android:text="@string/good_luck"
        android:textColor="@color/menu_text_color"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>