<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".ui.ShopFragment">


    <ImageButton
        android:id="@+id/ib_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wild_margin"
        android:layout_marginTop="@dimen/wild_margin"
        android:background="@null"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/tv_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:fontFamily="@font/font_main"
        android:gravity="center"
        android:shadowColor="#1936C8"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="50"
        android:text="@string/shop"
        android:textColor="@color/menu_text_color"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_attempts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:layout_marginTop="@dimen/wild_margin"
        android:fontFamily="@font/font_main"
        android:gravity="center"
        android:shadowColor="#1936C8"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="50"
        android:text="@string/main_menu"
        android:textColor="@color/menu_text_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:layout_marginBottom="@dimen/big_button_margin"
        android:background="@mipmap/button_image"
        android:fontFamily="@font/font_main"
        android:text="@string/buy_attempt"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_easy_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/wild_margin"
        android:text="@string/easy_mode"
        android:fontFamily="@font/font_main"
        android:textColor="@color/menu_text_color"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>