<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".ui.MenuFragment">


    <TextView
        android:id="@+id/tv_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:fontFamily="@font/font_main"
        android:gravity="center"
        android:shadowColor="#1936C8"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="50"
        android:text="@string/main_menu"
        android:textColor="@color/menu_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wild_margin"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:fontFamily="@font/font_main"
        android:gravity="center"
        android:shadowColor="#1936C8"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="50"
        android:text="@string/main_menu"
        android:textColor="@color/menu_user_text_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_menu" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:fontFamily="@font/font_main"
        android:background="@mipmap/button_image"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".30" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_shop"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:layout_marginTop="@dimen/big_button_margin"
        android:fontFamily="@font/font_main"
        android:background="@mipmap/button_image"
        android:text="@string/shop"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rules"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:layout_marginTop="@dimen/big_button_margin"
        android:background="@mipmap/button_image"
        android:fontFamily="@font/font_main"
        android:text="@string/rules"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_shop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:layout_marginTop="@dimen/big_button_margin"
        android:background="@mipmap/button_image"
        android:fontFamily="@font/font_main"
        android:text="@string/exit"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rules" />


</androidx.constraintlayout.widget.ConstraintLayout>