<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".ui.NormalgameFragment">

    <TextView
        android:id="@+id/tv_normal_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_main"
        android:text="@string/normal_mode"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wild_margin"
        android:layout_marginTop="@dimen/wild_margin"
        android:background="@null"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivStrangeFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wild_margin"
        android:layout_marginTop="@dimen/wild_margin"
        android:contentDescription="@string/strange_tile"
        android:src="@mipmap/strange_tile"
        app:layout_constraintBottom_toTopOf="@+id/ivStrangeThird"
        app:layout_constraintEnd_toStartOf="@+id/ivStrangeSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_normal_mode" />


    <ImageView
        android:id="@+id/ivStrangeSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wild_margin"
        android:layout_marginEnd="@dimen/wild_margin"
        android:contentDescription="@string/strange_tile"
        android:src="@mipmap/strange_tile"
        app:layout_constraintBottom_toTopOf="@+id/ivStrangeFourth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivStrangeFirst"
        app:layout_constraintTop_toBottomOf="@+id/tv_normal_mode" />


    <ImageView
        android:id="@+id/ivStrangeThird"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wild_margin"
        android:layout_marginTop="@dimen/wild_margin"
        android:contentDescription="@string/strange_tile"
        android:src="@mipmap/strange_tile"
        app:layout_constraintBottom_toTopOf="@+id/ivStrangeFifth"
        app:layout_constraintEnd_toStartOf="@+id/ivStrangeFourth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStrangeFirst" />

    <ImageView
        android:id="@+id/ivStrangeFourth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wild_margin"
        android:layout_marginEnd="@dimen/wild_margin"
        android:contentDescription="@string/strange_tile"
        android:src="@mipmap/strange_tile"
        app:layout_constraintBottom_toTopOf="@+id/ivStrangeFifth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivStrangeThird"
        app:layout_constraintTop_toBottomOf="@+id/ivStrangeSecond" />


    <ImageView
        android:id="@+id/ivStrangeFifth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/strange_tile"
        android:src="@mipmap/strange_tile"
        app:layout_constraintBottom_toTopOf="@+id/btn_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStrangeThird" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_use_attempt"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:background="@mipmap/button_image"
        android:fontFamily="@font/font_main"
        android:text="@string/use_attempt"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:layout_marginBottom="@dimen/wild_margin"
        android:background="@mipmap/button_image"
        android:fontFamily="@font/font_main"
        android:text="@string/accept"
        android:textColor="@color/button_text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_use_attempt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>