<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".ui.RegisterFragment">

    <TextView
        android:id="@+id/tv_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:layout_marginTop="@dimen/big_button_margin"
        android:fontFamily="@font/font_main"
        android:gravity="center"
        android:shadowColor="#1936C8"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="50"
        android:text="@string/please_enter_your_name"
        android:textColor="@color/menu_text_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
        android:autofillHints=""
        android:background="@mipmap/button_image"
        android:backgroundTint="@color/black_transparent"
        android:ems="10"
        android:fontFamily="@font/font_main"
        android:hint="@string/space"
        android:inputType="textPersonName"
        android:maxLength="8"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_menu" />
    <ImageView
        android:id="@+id/iv_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/drawable_cross"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_menu_height"
        android:layout_marginHorizontal="@dimen/wild_margin"
android:layout_marginBottom="@dimen/wild_margin"
        android:background="@mipmap/button_image"
        android:fontFamily="@font/font_main"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>